Updating the scripts to perform downloading the latest meterian-scanner jar and also make provisions to pass args in the future

--- a/action-scan/Dockerfile
+++ b/action-scan/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk
+FROM maven:3-alpine
 
 LABEL "com.github.actions.name"="Meterian Scanner"
 LABEL "com.github.actions.description"="Scan a Java repository for vulnerabilities"
@@ -10,6 +10,9 @@ LABEL "homepage"="http://github.com/neomatrix369"
 LABEL "maintainer"="Mani Sarkar <sadhak001@gmail.com>"
 
 RUN mkdir /.meterian
+
+RUN curl -o /.meterian/meterian-cli.jar  -O -J \
+         -L https://www.meterian.com/latest-client-canary
 
 ARG METERIAN_CLIENT_JAR
 COPY ${METERIAN_CLIENT_JAR} /${METERIAN_CLIENT_JAR}
