--- a/action.yml
+++ b/action.yml
@@ -8,9 +8,8 @@ inputs:
     cli_args:
         required: false
         description: Meterian client parameters
-        default: --help
 outputs: 
-    exit_code: # possibly the exit code from the cli execution -- see how's that done
+    exit_code:
         description: The exit code returned by the Meterian client reflecting the scan outcome
 runs:
     using: docker
