Added support for Open Source Software scan

--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,7 @@ runs:
     image: Dockerfile
     args: 
         - ${{ inputs.cli_args }}
+        - ${{ inputs.oss }}
 branding: 
     icon: zoom-in
     color: blue
