--- a/action.yml
+++ b/action.yml
@@ -10,9 +10,16 @@ inputs:
         required: false
         description: Open Source Software flag to instruct the client to avoid authenticating the scan as the project being scanned is open source.
         default: false
-    autofix: # maybe provide a default option that equals to the default program that the client will run if only passing --autofix
+    autofix:
         required: false
         description: The program(s) to use for the autofix. When provided, dependencies versions in the project manifest file(s) will be automatically fixed.
+    autofix_pr_branches:
+        required: false
+        description: A space separated glob list matching the names of the branches that are allowed to open pull requests when triggering a workflow
+    autofix_issue_branches:
+        required: false
+        description: A space separated glob list matching the names of the branches that are allowed to open issues when triggering a workflow
+
 runs:
     using: docker
     image: Dockerfile
@@ -20,6 +27,8 @@ runs:
         - ${{ inputs.cli_args }}
         - ${{ inputs.oss }}
         - ${{ inputs.autofix }}
+        - ${{ inputs.autofix_pr_branches }}
+        - ${{ inputs.autofix_issue_branches }}
 branding: 
     icon: zoom-in
     color: blue
